opinion writing introduction modal

--- a/opinionPage.html
+++ b/opinionPage.html
@@ -105,6 +105,31 @@
                                             <li class="list-items">-I strongly agree that...</li>
                                         </ul> 
                                     </div>
+                                    <br>
+                                    <div>
+                                        <h1>Main Ideas</h1>
+                                        <p class="modal-subtopics">
+                                            The last sentence in your introduction should list your main ideas or reasons that support your opinion.
+                                            After stating your opinion, you should let your reader know what reasons you will provide in the body section
+                                            of your paper. You can restate the topic and follow it with your main ideas or reasons.
+                                        </p>
+                                        <ul>
+                                            <li class="list-items">-Students should be recieve homework <b>because</b> it helps them remember lessons, it teaches responsibility, and it helps them practice.</li>
+                                            <br>
+                                            <li class="list-items">-The city needs to replace roads <b>because</b> they are dangerous and they can cause damage to cars.</li>
+                                        </ul>
+                                    </div>
+                                    <br>
+                                    <div>
+                                        <h1>Complete Example</h1>
+                                        <p class="modal-subtopics">
+                                            Did you know that 92% of schools don't allow homework to be given to students? Many schools have decided 
+                                            to abandon homework altogether citing various concerns from teachers and parents. In my opinion, students should
+                                            be given homework. They should be given homework becuase it helps students practice concepts, it teaches students
+                                            responsibility, and it helps parents to know what is being taught in school. 
+                                        </p>
+                                        
+                                    </div>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -121,22 +146,32 @@
                         <!-- Modal Structure -->
                         <div id="modal3" class="modal">
                             <div class="modal-content">
-                                <h1 class="text-structure-modal-title">Compare and Contrast Text Structure</h1>
+                                <h1 class="text-structure-modal-title">Body Paragraphs</h1>
                                 <div class="text-structure-modal-display" id='description-text-display'>
                                     <div>
-                                        <h2>Purpose:</h2>
-                                        <p class="modal-subtopics">To write about similarities and differences
-                                            between two topics, people, places, things, or ideas.
+                                        <h2>What should I include:</h2>
+                                        <p class="modal-subtopics">Your body paragraphs should only focus on your main ideas and the supporting
+                                            details. Your main ideas(reasons) should be in the same order as they were presented in the last sentence in your
+                                            introduction paragraph. 
                                         </p>
                                     </div>
+                                    <br>
                                     <div>
                                         <h2>
                                             Signal Words:
                                         </h2>
-                                        <p class="modal-subtopics">similar, alike, compared to, both, similarity,
-                                            correlates,resembles, relates to, difference, contrasting, unlike, differs
-                                            from, opposite, however, while, not related to
+                                        <p class="modal-subtopics">
+                                            To easily transition between each main idea, you can use signal words to help your paper flow from one reason to another.
+                                            The words or phrases you can use could be any of the following:
                                         </p>
+                                        <ul>
+                                            <li class="list-items">-My first, second, third reason</li>
+                                            <li class="list-items">-Another reason...</li>
+                                            <li class="list-items">-Next....</li>
+                                            <li class="list-items">-Lastly...</li>
+                                            <li class="list-items">-Finally...</li>
+
+                                        </ul> 
                                     </div>
                                     <div>
                                         <h2>
