Information page updated to includes icons row and random topic prompts add button to choose different topic

--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
+                                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal1" onclick=informativeChoice()>Choose another</a>
                                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -125,6 +128,7 @@
                     <div class="card-action">
                         <div class="button-section">
                             <!-- Modal Trigger -->
+                            
                             <a class="waves-effect waves-light btn modal-trigger" id="topic-button" onclick=opinionChoice()
                                 href="#modal2">Opinion
                                 Topics</a>
@@ -140,6 +144,8 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
+                                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal2" onclick=opinionChoice()>Choose another</a>
                                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
                                 </div>
                             </div>
@@ -173,6 +179,8 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
+                                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal3" onclick=narrativeChoice()>Choose another</a>
                                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
                                 </div>
                             </div>
