icons-row-buttons-renamed-html-working-on-styling

--- a/informativePage.html
+++ b/informativePage.html
@@ -276,21 +276,7 @@
         
 
         <div class="row" id="icon-section">
-            <div class="col s3" id="icons-row">
-                <i class="fas fa-user-edit"></i>
-                <div id="editing-column">Choose Text Structure</div>
-                <div>
-                    <p class="column-descriptions">Test your knowledge of text structure by reading a topic and choosing the correct text structure to write it.</p>
-                </div>
-            </div>
              <div class="col s3" id="icons-row">
-                <i class="fas fa-user-edit"></i>
-                <div id="editing-column">Text Structure Passages</div>
-                <div>
-                    <p class="column-descriptions">Test your knowledge of text structure by reading a sentence or passage. Then you will choose which text structure it is.</p>
-                </div>
-            </div>
-            <div class="col s3" id="icons-row">
                 <i class="fas fa-user-edit"></i>
                 <div id="editing-column">Random Topics</div>
                 <div>
@@ -323,9 +309,39 @@
             </div>
             <div class="col s3" id="icons-row">
                 <i class="fas fa-user-edit"></i>
+                <div id="editing-column">Topic Choice</div>
+                <div>
+                    <p class="column-descriptions">Test your knowledge of text structure by reading a topic and choosing the correct text structure to write it.</p>
+                </div>
+                <div class="button-section">
+                     <!-- Modal Trigger -->
+                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                    href="#modal1" onclick=informativeChoice()>Play Topic Choice</a>
+                </div>
+            </div>
+             <div class="col s3" id="icons-row">
+                <i class="fas fa-user-edit"></i>
+                <div id="editing-column">Passages Match</div>
+                <div>
+                    <p class="column-descriptions">Test your knowledge of text structure by reading a sentence or passage. Then you will choose which text structure it is.</p>
+                </div>
+                <div class="button-section">
+                     <!-- Modal Trigger -->
+                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                    href="#modal1" onclick=informativeChoice()>Play Passage Game</a>
+                </div>
+            </div>
+           
+            <div class="col s3" id="icons-row">
+                <i class="fas fa-user-edit"></i>
                 <div id="editing-column">Examples</div>
                 <div>
                     <p class="column-descriptions">Test your knowledge of text structure by reading a sentence or passage. Then you will choose which text structure it is.</p>
+                </div>
+                <div class="button-section">
+                     <!-- Modal Trigger -->
+                    <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                    href="#modal1" onclick=informativeChoice()>View Examples</a>
                 </div>
             </div>
         </div>
